--- a/FontEnd/Desktop/skytek-bridge/package.json
+++ b/FontEnd/Desktop/skytek-bridge/package.json
@@ -46,6 +46,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "serialport": "^11.0.1",
+    "svg-react-loader": "^0.4.6",
     "tableify": "^1.1.1"
   }
 }
