--- a/FontEnd/Desktop/skytek-bridge/tsconfig.json
+++ b/FontEnd/Desktop/skytek-bridge/tsconfig.json
@@ -7,7 +7,8 @@
     "module": "commonjs",
     "skipLibCheck": true,
     "lib": [
-      "ES2021.String"
+      "ES2021.String",
+      "DOM"
     ],
     "esModuleInterop": true,
     "noImplicitAny": true,
