--- a/FontEnd/Desktop/skytek-bridge/package.json
+++ b/FontEnd/Desktop/skytek-bridge/package.json
@@ -52,6 +52,7 @@
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-virtualized-auto-sizer": "^1.0.20",
     "serialport": "^11.0.1",
     "svg-react-loader": "^0.4.0",
