--- a/Capabilities/lora/lora.jsonc
+++ b/Capabilities/lora/lora.jsonc
@@ -3,10 +3,12 @@
     "name":"LoRa",
     "description": "Long Range Radio transciver transmitting at 915mhz.",
     "command":"lora",
+    "requires":[],
     "data":[
         {"name":"rssi", "type":"number"},
+        {"name":"rssi", "type":"number"},
         {"name":"heartbeat", "type":"number"},
-        {"name":"message", "type":"string", "length":"256"},
+        {"name":"message", "type":"string", "length":"256"}
     ],
     "modifiers":{
         "heartbeat":{
