--- a/Devices/SkyTekLink/config.jsonc
+++ b/Devices/SkyTekLink/config.jsonc
@@ -2,6 +2,7 @@
     "name":"SkyTek Radio Downlink",
     "capabilities":[
         "lora_receive",
-        "serial"
+        "serial",
+        "heartbeat"
     ]
 }
