--- a/FrontEnd/Desktop/skytek-bridge/package.json
+++ b/FrontEnd/Desktop/skytek-bridge/package.json
@@ -49,6 +49,7 @@
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "electron-squirrel-startup": "^1.0.0",
+    "mustache": "^4.2.0",
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
