--- a/FrontEnd/Desktop/skytek-bridge/package.json
+++ b/FrontEnd/Desktop/skytek-bridge/package.json
@@ -25,6 +25,7 @@
     "@electron-forge/maker-zip": "^6.4.1",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.1",
     "@electron-forge/plugin-webpack": "^6.4.1",
+    "@types/mustache": "^4.2.5",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.3",
