--- a/FrontEnd/Desktop/skytek-bridge/package.json
+++ b/FrontEnd/Desktop/skytek-bridge/package.json
@@ -50,6 +50,7 @@
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.19.2",
     "mustache": "^4.2.0",
     "pigeon-maps": "^0.21.3",
     "react": "^18.2.0",
