Started refactoring message passing system to be more robust. Still need to define API

--- a/Capabilities/lora/lora.jsonc
+++ b/Capabilities/lora/lora.jsonc
@@ -1,14 +1,14 @@
 {
     // Metadata
     "name":"LoRa",
-    "description": "Long Range Radio transciver transmitting at 915mhz.",
+    "description": "Long Range Radio transceiver transmitting at 915mhz.",
     "command":"lora",
     "requires":[],
     "data":[
         {"name":"rssi", "type":"number"},
         {"name":"rssi", "type":"number"},
         {"name":"heartbeat", "type":"number"},
-        {"name":"message", "type":"string", "length":"256"}
+        {"name":"message", "type":"string", "length":256}
     ],
     "modifiers":{
         "heartbeat":{
