--- a/FrontEnd/Desktop/skytek-bridge/package.json
+++ b/FrontEnd/Desktop/skytek-bridge/package.json
@@ -49,6 +49,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
+    "date-fns": "^4.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.19.2",
     "mustache": "^4.2.0",
@@ -56,6 +57,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-scrollbars-custom": "^4.1.1",
     "react-virtualized-auto-sizer": "^1.0.20",
     "serialport": "^11.0.1",
     "svg-react-loader": "^0.4.0",
